Stable build of RCE

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL Build.loader.js";
+      var loaderUrl = buildUrl + "/Oct 22.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL Build.data",
-        frameworkUrl: buildUrl + "/WebGL Build.framework.js",
-        codeUrl: buildUrl + "/WebGL Build.wasm",
+        dataUrl: buildUrl + "/Oct 22.data",
+        frameworkUrl: buildUrl + "/Oct 22.framework.js",
+        codeUrl: buildUrl + "/Oct 22.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "RCE",
